# hachimi-deployer

./: .env.compose.example  Cargo.toml  Dockerfile  LICENSE  README.md  compose.example.yml
.github/workflows/: docker-release.yml
config/: deployer.example.toml
src/: config.rs  engine.rs  error.rs  main.rs  server.rs
