[package]
name = "hachimi_deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyperlocal = "0.9.1"
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "tokio"] }
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
